--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,6 +49,6 @@
         </div>
     </section>  
 
-<script type="module" src="scripts/index.js"></script>
+<script src="scripts/index.js"></script> 
 </body> 
 </html>
